# gcPve

./: Benchmark.cu  Benchmark1_L1.csv  Benchmark_1.csv  Benchmark_16bit.csv  Benchmark_16bit_1.csv  Benchmark_2.csv  Benchmark_3.csv  Benchmark_L1_100_100.csv  Benchmark_L1_10_10.csv  CMakeLists.txt  GPU_Info.csv  GPU_Memory_Topology.csv  README.md  README_(unfinished).md  Sonstige_Codes  evaluation.py  makefile
old/: GPU_Info.csv  GPU_Infoe.csv
raw/: Bench_Prop.csv  Benchmark_GM.csv  Benchmark_L1.csv  Benchmark_L2.csv  Benchmark_SM.csv  GPU_Info.csv  InfoProp_Derivatives.csv
raw_1/: Benchmark_L1.csv
raw_time-x_1/: Benchmark_L1.csv  Benchmark_L2.csv
raw_time-x_2/: Benchmark_L1.csv  Benchmark_L2.csv  InfoProp_Derivatives.csv
raw_time-x_test1.1/: GPU_Info.csv
raw_time-x_test1.2/: Bench_Prop.csv  Benchmark_GM.csv  Benchmark_L1.csv  Benchmark_L2.csv
raw_time-x_test1.3/: Benchmark_L2.csv
src/: 00-Main.cu  01-Gpu_Information.cuh  02-Benchmark_Properties.cuh  03-Info_Prop_Derivatives.cuh  04-Core_Characteristics.cuh  05-Data_Collection.cuh  0_Main.cu  10-Perform_Benchmark.cuh  11-Benchmark_Extensions.cuh  11-Benchmark_Extensions.py  11-Sort_Data_Collection.cuh  1_Gpu_Information.cuh  20-L1_Cache_Launcher.cuh  20-Launch_Benchmark.cuh  21-L1_Cache_Benchmark.cuh  21-L1_SM_L2_GM_Benchmark.cuh  2_Analyze_SM.cuh  30-Shared_Memory_Launcher.cuh  30-Shared_Memory_Launcher.h  31-Shared_Memory_Benchmark.cuh  40-L2_Cache_Launcher.cuh  41-L2_Cache_Benchmark.cuh  50-Global_Memory_Launcher.cuh  51-Global_Memory_Benchmark.cuh  Analyze_Random_Cores.cuh  CMakeLists.txt  CMakeLists_(unfinished).txt  GpuInformation.cuh  Sonstiges  analyze.cu  cudaDeviceProperties.cuh  evaluation.py
src/cuda-samples/Common/: helper_cuda.h
(+3 files in other folders)
